--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ android.useAndroidX=true
 SONATYPE_AUTOMATIC_RELEASE=true
 SONATYPE_HOST=S01
 RELEASE_SIGNING_ENABLED=true
+org.gradle.caching=true
